--- a/cr/news/news.txt
+++ b/cr/news/news.txt
@@ -1,2 +1,10 @@
+# Big Text
+
+## Small Text
+
+### Smallest Text
+
+-# Woah even smaller
+
 ## ===14/1/2025====
 The Prismatica news is finally here!
