--- a/cr/news/news.txt
+++ b/cr/news/news.txt
@@ -1,2 +1,2 @@
 ## ===14/1/2025====
-The Prismatica news is finally here!
+The Prismatica news is finally here! With the introduction to the new update, we've had many new additions and changes to how the pack is developed and made. Compatibility is especially diffrent as more functionality is being kept for the sake of allowing the maximum amount of creativity we can, while giving a balanced experience!
