--- a/cr/news/news.txt
+++ b/cr/news/news.txt
@@ -1,2 +1,5 @@
 ## ===14/1/2025====
-The Prismatica news is finally here! With the introduction to the new update, we've had many new additions and changes to how the pack is developed and made. Compatibility is especially diffrent as more functionality is being kept for the sake of allowing the maximum amount of creativity we can, while giving a balanced experience!
+The Prismatica news is finally here!
+With the introduction to the new update, we've had many new additions and changes to how the pack is developed and made, especially with compatibility!
+I hope you really enjoy this new update, and with most connection issues being resolved. The server should now be playable for anybody whitelisted!
+This update includes numerous new features such as an *entirely new* magic system! As well as popular mods such as Wilder Wild or Harvest with ease!
